fix intro text/pic spacing

--- a/css/style.css
+++ b/css/style.css
@@ -8501,6 +8501,11 @@ h1, h2, h3, h4, h5,
               z-index: 1;
               padding: 1em;
               overflow:scroll; } }
+              @media (max-width: 991.98px) {
+                .text {
+                  margin-top: 250px;
+                }
+              }
           .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
             width: 100%; }
             @media (min-width: 992px) {
